Integrating with AWS, and also using hellojustin.net addresses to handle emails.

--- a/app/views/commit_notification_mailer/commit_notification.html.erb
+++ b/app/views/commit_notification_mailer/commit_notification.html.erb
@@ -6,6 +6,24 @@
   </head>
 
   <body>
-    <h1>testing 1.. 2.. </h1>
+    <h2>
+      <%= @commit.repository %> Commit Notification:
+    </h2>
+    
+    <div id='commit-details'>
+      <p>Branch: <%= @commit.branch %></p>
+      <p>Committer: <%= @commit.committer %></p>
+      <p>Time: <%= @commit.date %></p>
+      <p>Revision: <%= @commit.revision %></p>
+    </div>
+  
+    <div id='commit-comment'>
+      <p><%= @commit.comment %></p>
+    </div>
+
+    <pre id='commit-diff'>
+      <%= @commit.diff %>
+    </pre>
+
   </body>
 </html>
