--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -11,6 +11,12 @@
   <% end %>
   <% if user_signed_in? %>
     <li>
+    <%= link_to('Notification rules', notification_rules_path) %>
+    </li>
+    <li>
+    <%= link_to('Notifications', notifications_path) %>
+    </li>
+    <li>
     <%= link_to('Edit account', edit_user_registration_path) %>
     </li>
   <% else %>
