--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,27 +1,53 @@
 <%= link_to "Home", root_path, :class => 'brand' %>
-<ul class="nav">
+
+<ul class="nav pull-left">
+
   <% if user_signed_in? %>
-    <li>
-    <%= link_to('Logout', destroy_user_session_path, :method=>'delete') %>
-    </li>
+
+    <li><%= link_to 'My Notifications', notifications_path %></li>
+    <li><%= link_to 'Integrations', integrations_path %></li>
+
   <% else %>
-    <li>
-    <%= link_to('Login', new_user_session_path)  %>
-    </li>
+
+    <li><%= link_to 'Sign up', new_user_registration_path %></li>
+
   <% end %>
-  <% if user_signed_in? %>
-    <li>
-    <%= link_to('Notification rules', notification_rules_path) %>
-    </li>
-    <li>
-    <%= link_to('Notifications', notifications_path) %>
-    </li>
-    <li>
-    <%= link_to('Edit account', edit_user_registration_path) %>
-    </li>
-  <% else %>
-    <li>
-    <%= link_to('Sign up', new_user_registration_path)  %>
-    </li>
-  <% end %>
+
 </ul>
+
+<ul class="nav pull-right">
+
+  <% if user_signed_in? %>
+
+    <li class='dropdown'>
+
+      <a href='#' class='dropdown-toggle' data-toggle='dropdown'>
+        <%= current_user.email %>
+        <b class="caret"></b>
+      </a>
+
+      <ul class='dropdown-menu'>
+        <li><%= link_to 'My Profile', user_path( current_user ) %></li>
+        <li class='divider'></li>
+        <li><%= link_to 'Edit account', edit_user_registration_path %></li>
+        <li><%= link_to 'Logout', destroy_user_session_path, :method=>'delete' %></li>
+      </ul>
+
+    </li>
+
+  <% else %>
+
+    <li><%= link_to 'Login', new_user_session_path %></li>
+
+  <% end %>
+
+</ul>
+
+<form class="navbar-search pull-right" action="<%= users_path %>">
+
+  <input type="text" 
+         name="search_terms" 
+         class="search-query" 
+         placeholder="Search for People" />
+
+</form>
