Identify user without logging when requesting git post-commit hook

--- a/app/views/integrations/downloads/git_client_side/post_commit.erb
+++ b/app/views/integrations/downloads/git_client_side/post_commit.erb
@@ -1,6 +1,6 @@
 #!/bin/sh
 
-notifierUrl="<%= "#{root_url}/commits.json" %>"
+notifierUrl="<%= "#{root_url}commits.json" %>"
 apiKey="<%= user.api_key %>"
 eventType="git-client-side-commit"
 
