Implementing missing 'wants_to_hear_about?' method with return value hard-coded to true. (We'll build more logic there later.) Also passing api_key correctly on POST from git-client-side post-commit integration.

--- a/app/views/integrations/downloads/git_client_side/post_commit.erb
+++ b/app/views/integrations/downloads/git_client_side/post_commit.erb
@@ -16,4 +16,4 @@ branch="We have no idea"
 
 echo "Sending commit data to $notifierUrl"
 
-curl=`curl --data "apiKey=$apiKey&commit[revision]=$revision&commit[committer]=$committerEmail&commit[date]=$date&commit[comment]=$comment&commit[branch]=$branch&commit[diff]=$diff" $notifierUrl`
+curl=`curl --data "api_key=$apiKey&commit[revision]=$revision&commit[committer]=$committerEmail&commit[date]=$date&commit[comment]=$comment&commit[branch]=$branch&commit[diff]=$diff" $notifierUrl`
