Follow requests must now be approved by the followed user.

--- a/app/views/followings/index.html.erb
+++ b/app/views/followings/index.html.erb
@@ -2,9 +2,9 @@
 
 <ul>
 
-  <% followings.each do |following| %>
+  <% followed_users.each do |user| %>
 
-    <li><%= following.followed_user.email %></li>
+    <li><%= user.email %></li>
 
   <% end %>
 
