--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,6 +7,16 @@
   <div id="followedUsers">
     <h3>Following</h3>
     <ul>
+
+      <% pending_follows.each do |following| %>
+        <li>
+          <%= link_to following.followed_user.email, 
+                      user_path( following.followed_user ) %>
+          <small>
+            (<%= link_to 'pending their approval', edit_following_path( following ) %>)
+          </small>
+        </li>
+      <% end %>
     
       <% followed_users.each do |followed_user| %>
         <li>
@@ -21,6 +31,17 @@
   <div id="followingUsers">
     <h3>Followed By</h3>
     <ul>
+      
+      <% requested_follows.each do |following| %>
+        <li>
+          <%= link_to following.following_user.email, 
+                      user_path( following.following_user ) %>
+          <small>
+            (<%= link_to 'pending my approval', edit_following_path( following ) %>)
+          </small>
+        </li>
+      <% end %>
+    
 
       <% following_users.each do |following_user| %>
         <li>
