--- a/app/views/notification_mailer/notification.html.erb
+++ b/app/views/notification_mailer/notification.html.erb
@@ -8,7 +8,7 @@
 
   <body>
     <h3>
-      <%= @event.type %> Event Notification
+      <%= @event.kind %> Event Notification
     </h3>
     
     <div id='event-details'>
