--- a/app/views/notification_mailer/notification.html.erb
+++ b/app/views/notification_mailer/notification.html.erb
@@ -14,7 +14,8 @@
     <div id='event-details'>
     
       <% @event.data.each do |k,v| %> 
-        <p><%= k %>: <%= v %></p>
+        <p><%= k %></p>
+        <pre><%= v %></pre>
       <% end %>
     
     </div>
