Use full url in url to approve following request.

--- a/app/views/followings_mailer/follow_request.html.erb
+++ b/app/views/followings_mailer/follow_request.html.erb
@@ -19,7 +19,7 @@
     </p>
 
     <p>
-      <%= link_to 'Approve this Request', following_path( @following ) %>
+      <%= link_to 'Approve this Request', following_url( @following ) %>
     </p>
 
     <p>
