--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -23,3 +23,19 @@
   -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15);
   box-shadow: 0 1px 2px rgba(0,0,0,.15);
 }
+
+.user-card {
+  h3 {
+    margin : 0;
+  }
+}
+
+.notification-card {
+  border-bottom : 1px solid #eee;
+  margin-bottom : 15px;
+  padding-bottom : 5px;
+
+  h3 {
+    margin : 0;
+  }
+}
