--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -13,6 +13,13 @@
       </div>
     </div>
 
+    <div class='control-group'>
+      <%= f.label :summary, :class => 'control-label' %>
+      <div class='controls'>
+        <%= f.text_area :summary, :class => 'input-xxlarge' %>
+      </div>
+    </div>
+
   <% end %>
 
   <%= f.fields_for :data do |d| %>
