--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,18 +20,20 @@
       </nav>
     </header>
     <div id="main" role="main">
+
       <div class="container">
-        <div class="content">
-           <div class="row">
-            <div class="span12">
-              <%= render 'layouts/messages' %>
-              <%= yield %>
-            </div>
-          </div>
-          <footer>
-          </footer>
+
+        <div class="row">
+         
+          <%= content_for?( :content ) ? yield( :content ) : yield %>
+
         </div>
-      </div> <!--! end of .container -->
+
+      </div>
+      
+      <footer>
+      </footer>
+
     </div> <!--! end of #main -->
   </body>
 </html>
