--- a/app/views/layouts/_user_sidebar.html.erb
+++ b/app/views/layouts/_user_sidebar.html.erb
@@ -1,93 +1,124 @@
-<aside class='well well-small'>
+<%
+  user = @user || current_user
 
-  <div class='row'>
-    <div class='span4 media user-card'>
-      <%= link_to user_path( current_user ), :class => 'pull-left' do %>
-        <%= image_tag 'icon_user_64x64.png', :class => 'media-object img-rounded', 'data-src' => 'holder.js/64x64' %>
+  if user
+%>
+
+  <aside class='well well-small'>
+
+    <div class='row'>
+      <%= link_to user_path( user ), :class => 'muted' do %>
+
+        <div class='span4 media user-card'>
+          <%= image_tag 'icon_user_64x64.png', 
+                        :class => 'media-object img-rounded pull-left', 
+                        'data-src' => 'holder.js/64x64' %>
+
+          <div class='media-body'>
+            <h3><%= user.name %></h3>
+            <p class='muted'><%= user.email %></p>
+          </div>
+        </div>
+
+      <% end %>
+    </div>
+
+    <div class='row-fluid'>
+      <%= link_to user_events_path( user ), 
+                  :class => 'muted span3 pagination-centered' do %>
+        <div>
+          <h4><%= user.events.count %></h4>
+          Events
+        </div>
       <% end %>
 
-      <div class='media-body'>
-        <h3><%= current_user.name %></h3>
-        <p class='muted'><%= current_user.email %></p>
-      </div>
-    </div>
-  </div>
+      <%= link_to '#', 
+                  :class => 'muted span3 pagination-centered' do %>
+        <div>
+          <h4><%= user.notification_rules.count %></h4>
+          Notification Rules
+        </div>
+      <% end %>
+        
+      <%= link_to user_followers_path( user ), 
+                  :class => 'muted span3 pagination-centered' do %>
+        <div>
+          <h4><%= user.followers.count %></h4>
+          Followers
+        </div>
+      <% end %>
 
-  <div class='row-fluid'>
+      <%= link_to user_following_path( user ), 
+                  :class => 'muted span3 pagination-centered' do %>
+        <div>
+          <h4><%= user.followed_users.count %></h4>
+          Following
+        </div>
+      <% end %>
 
-    <div class='span3 pagination-centered'>
-      <h4><%= current_user.events.count %></h4>
-      Events
     </div>
 
-    <div class='span3 pagination-centered'>
-      <h4><%= current_user.notification_rules.count %></h4>
-      Notification Rules
-    </div>
+  </aside>
+
+  <aside class='well well-small'>
+    <header>
+      <% if user == current_user %>
+        <b>Your Network</b>
+      <% else %>
+        <b><%= user.name %>'s Network</b>
+      <% end %>
+    </header>
+
+    <ul class='nav nav-list'>
+      <li class='nav-header'>Recent Follows:</li>
       
-    <div class='span3 pagination-centered'>
-      <h4><%= current_user.followers.count %></h4>
-      Followers
-    </div>
-
-    <div class='span3 pagination-centered'>
-      <h4><%= current_user.followed_users.count %></h4>
-      Following
-    </div>
-
-  </div>
-
-</aside>
-
-<aside class='well well-small'>
-  <header>
-    <b>Your Network</b>
-  </header>
-
-  <ul class='nav nav-list'>
-    <li class='nav-header'>Recent Follows:</li>
+      <% user.pending_follows.each do |following| %>
+        <% if following.include? current_user %>
+          <li>
+            <%= link_to following.followed_user.email, 
+                        user_path( following.followed_user ) %>
+            <small>
+              (<%= link_to 'pending their approval', edit_following_path( following ) %>)
+            </small>
+          </li>
+        <% end %>
+      <% end %>
     
-    <% current_user.pending_follows.each do |following| %>
-      <li>
-        <%= link_to following.followed_user.email, 
-                    user_path( following.followed_user ) %>
-        <small>
-          (<%= link_to 'pending their approval', edit_following_path( following ) %>)
-        </small>
-      </li>
-    <% end %>
-  
-    <% current_user.followed_users.each do |followed_user| %>
-      <li>
-        <%= link_to followed_user.email, user_path( followed_user ) %>
-      </li>
-    <% end %>
+      <% user.followed_users.each do |followed_user| %>
+        <li>
+          <%= link_to followed_user.email, user_path( followed_user ) %>
+        </li>
+      <% end %>
 
-    <li><a href="#">all...</a></li>
+      <li><a href="#">all...</a></li>
+      
+    </ul>
+
+    <ul class='nav nav-list'>
+      <li class='nav-header'>Recent Followers</li>
+
+      <% user.requested_follows.each do |following| %>
+        <% if following.include? current_user %>
+          <li>
+            <%= link_to following.following_user.email, 
+                        user_path( following.following_user ) %>
+            <small>
+              (<%= link_to 'pending my approval', edit_following_path( following ) %>)
+            </small>
+          </li>
+        <% end %>
+      <% end %>
     
-  </ul>
 
-  <ul class='nav nav-list'>
-    <li class='nav-header'>Recent Followers</li>
+      <% user.followers.each do |follower| %>
+        <li>
+          <%= link_to follower.email, user_path( follower ) %>
+        </li>
+      <% end %>
 
-    <% current_user.requested_follows.each do |following| %>
-      <li>
-        <%= link_to following.following_user.email, 
-                    user_path( following.following_user ) %>
-        <small>
-          (<%= link_to 'pending my approval', edit_following_path( following ) %>)
-        </small>
-      </li>
-    <% end %>
-  
+      <li><a href="#">all...</a></li>
 
-    <% current_user.followers.each do |follower| %>
-      <li>
-        <%= link_to follower.email, user_path( follower ) %>
-      </li>
-    <% end %>
+    </ul>
+  </aside>
 
-    <li><a href="#">all...</a></li>
-
-  </ul>
-</aside>
+<% end %>
