--- a/app/views/followings/following.html.erb
+++ b/app/views/followings/following.html.erb
@@ -1,21 +1,10 @@
 <div id="followingList">
 
-  <% @user.requested_follows.each do |following| %>
-    <li>
-      <% if following.include? current_user %>
-        <%= link_to following.following_user.email, 
-                    user_path( following.following_user ) %>
-        <small>
-          (<%= link_to 'pending my approval', edit_following_path( following ) %>)
-        </small>
-      </li>
-    <% end %>
-  <% end %>
+  <ul class='unstyled'>
 
-  <% @user.followers.each do |follower| %>
-    <li>
-      <%= link_to follower.email, user_path( follower ) %>
-    </li>
-  <% end %>
+  <%= render :partial => 'followings/following_list', 
+             :locals => { :user => @user, :full_row => true } %>
+
+  </ul>
 
 </div>
