Improve Event/Notification view styling.

--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -4,7 +4,7 @@
 
 <div id="notificationsList">
   
-  <% notifications.each do |notification| %>
+  <% @notifications.each do |notification| %>
   
   <div class='row'>
 
