--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -7,9 +7,6 @@
     <li class=<%= 'active' if current_page? notifications_path %> >
       <%= link_to 'My Notifications', notifications_path %>
     </li>
-    <li class=<%= 'active' if current_page? new_user_event_path( current_user ) %> >
-      <%= link_to 'New Event', new_user_event_path( current_user ) %>
-    </li>
     <li class=<%= 'active' if current_page? integrations_path %> >
       <%= link_to 'Integrations', integrations_path %>
     </li>
@@ -39,6 +36,7 @@
 
       <ul class='dropdown-menu'>
         <li><%= link_to 'My Profile', user_path( current_user ) %></li>
+        <li><%= link_to 'New Event', new_user_event_path( current_user ) %></li>
         <li class='divider'></li>
         <li><%= link_to 'Edit account', edit_user_registration_path %></li>
         <li><%= link_to 'Logout', destroy_user_session_path, :method=>'delete' %></li>
