Landing page first-pass. Still need to write copy.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,54 @@
-<h1>The HelloJustin.net Notifier!</h1>
+<div class='jumbotron landing-page-header'>
+
+  <div class='container'>
+    <h3>Operations notifications, simplified.</h3>
+    <%= link_to 'Sign Up for Free', new_user_registration_path, :class => 'btn btn-large btn-primary' %>
+  </div>
+  
+</div>
+
+<div class='container'>
+
+  <div class='row value-prop-detail'>
+
+    <div class='span1'>
+      
+      <%= image_tag 'icons/bell.svg', :class => 'value-prop-icon' %>
+
+    </div>
+
+    <div class='span11'>
+
+      <p class='lead'>
+        Hear about operations events, the way you want. 
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse fermentum venenatis nisl non porta. Vivamus nec elit dui, a tempor augue. Donec quis odio enim, id eleifend metus. Nulla facilisi. Proin accumsan turpis ut felis venenatis a iaculis nibh tincidunt. Duis id diam eu libero mattis hendrerit. Pellentesque at augue non felis bibendum egestas eget nec nibh.
+      </p>
+
+    </div>
+
+  </div>
+  
+  <div class='row value-prop-detail'>
+
+    <div class='span1'>
+    
+      <%= image_tag 'icons/centralized.svg', :class => 'value-prop-icon' %>
+
+    </div>
+
+    <div class='span11'>
+
+      <p class='lead'>
+        All of your notifications in one place.
+      </p>
+      <p>
+        Integer scelerisque dictum arcu vitae eleifend. Nam id mollis ipsum. Suspendisse dolor urna, tincidunt nec pellentesque et, lacinia in lorem. In eu ligula dolor. Etiam at eros nibh, nec bibendum sem. Nam quis bibendum purus. Etiam tincidunt varius ligula, sit amet suscipit sapien adipiscing id. Phasellus fermentum, erat eget scelerisque tempus, turpis lacus blandit mauris, nec pharetra nibh quam ac lectus. Nulla viverra sagittis ligula, sit amet sodales odio commodo in. Phasellus lacinia est in est luctus tincidunt. Aenean viverra turpis in leo pretium sodales.
+      </p>
+
+    </div>
+
+  </div>
+
+</div>
