--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,13 +12,73 @@
  *= require_tree .
  */
 
+@import "compass";
+@import "compass/css3";
+
+.jumbotron {
+
+  @include background( linear-gradient( top left, rgba(255, 255, 255, 0.1), rgba(0, 0, 0, 0.25) ), url('patterns/noisy_net.png') );
+  //background: #151a1f;
+
+  -webkit-box-shadow: 0 1px 3px rgba(0,0,0,.25);
+  -moz-box-shadow: 0 1px 3px rgba(0,0,0,.25);
+  box-shadow: 0 1px 3px rgba(0,0,0,.25);
+
+  .container {
+    padding-top : 250px;
+  }
+}
+
+.landing-page-header {
+  height : 400px;
+  margin-bottom : 40px;
+  
+  h3 {
+    color : #eee;
+    font-weight : normal;
+    letter-spacing : 1px;
+  }
+
+}
+
+img.value-prop-icon {
+  width : 100%;
+}
+
+.value-prop-detail {
+  margin-top : 40px;
+  margin-bottom : 80px;
+  font-size : 16px;
+  line-height : 25px;
+  color : #777;
+}
+
+.navbar {
+  margin-top : 20px;
+
+  .nav > .active > a, 
+  .nav > .active > a:hover, 
+  .nav > .active > a:focus,
+  .nav li.dropdown.open > .dropdown-toggle, 
+  .nav li.dropdown.active > .dropdown-toggle, 
+  .nav li.dropdown.open.active > .dropdown-toggle {
+    -webkit-border-radius: 6px;
+    -moz-border-radius: 6px;
+    border-radius: 6px;
+    -webkit-box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
+    -moz-box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
+    box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
+  }
+
+}
+
 .content {
   background-color: #eee;
   padding: 20px;
   margin: 0 -20px; /* negative indent the amount of the padding to maintain the grid system */
-  -webkit-border-radius: 0 0 6px 6px;
-  -moz-border-radius: 0 0 6px 6px;
-  border-radius: 0 0 6px 6px;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  border-radius: 6px;
   -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15);
   -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15);
   box-shadow: 0 1px 2px rgba(0,0,0,.15);
@@ -42,4 +102,9 @@
 
 a.muted {
   color : #333;
+}
+
+.vertically-centered {
+  position : absolute;
+  top : 35%;
 }
