--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,4 +1,4 @@
-<%= link_to "Home", root_path, :class => 'brand' %>
+<%= link_to "OpsTab", root_path, :class => 'brand' %>
 
 <ul class="nav pull-left">
 
@@ -10,10 +10,6 @@
     <li class=<%= 'active' if current_page? integrations_path %> >
       <%= link_to 'Integrations', integrations_path %>
     </li>
-
-  <% else %>
-
-    <li><%= link_to 'Sign up', new_user_registration_path %></li>
 
   <% end %>
 
