--- a/app/views/layouts/landing_page.html.erb
+++ b/app/views/layouts/landing_page.html.erb
@@ -11,13 +11,14 @@
     <%= csrf_meta_tags %>
     <%= yield(:head) %>
   </head>
-  <body>
-    
+  <body class='landing-page'>
+
+
     <div id="main" role="main">
 
-      <div class='container'>
+      <div class='main-navigation container'>
         <header class="navbar">
-          <nav class='navbar-flat'>
+          <nav>
             <div class="container">
               <%= render 'layouts/navigation' %>
             </div>
@@ -25,22 +26,15 @@
         </header>
       </div>
 
-      <div class="container">
-
-        <div class="row">
-         
-          <%= content_for?( :content ) ? yield( :content ) : yield %>
-
-        </div>
-
-      </div>
-      
-      <footer>
-
-        <%= yield :footer %>
-
-      </footer>
+      <%= content_for?( :content ) ? yield( :content ) : yield %>
 
     </div> <!--! end of #main -->
+
+    <footer>
+      
+      <%= yield :footer %>
+
+    </footer>
+
   </body>
 </html>
