Initial copy for landing page.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,8 +1,14 @@
 <div class='jumbotron landing-page-header'>
 
   <div class='container'>
-    <h3>Operations notifications, simplified.</h3>
+    <div class='span6'>
+    <h3>Smooth Operator.</h3>
+    <p>
+      OpsTab reduces 'notification noise' and gives your organization insight 
+      into how your processes are performing.
+    </p>
     <%= link_to 'Sign Up for Free', new_user_registration_path, :class => 'btn btn-large btn-primary' %>
+    </div>
   </div>
   
 </div>
@@ -20,10 +26,14 @@
     <div class='span11'>
 
       <p class='lead'>
-        Hear about operations events, the way you want. 
+        Less noise, more signal, smarter action. 
       </p>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse fermentum venenatis nisl non porta. Vivamus nec elit dui, a tempor augue. Donec quis odio enim, id eleifend metus. Nulla facilisi. Proin accumsan turpis ut felis venenatis a iaculis nibh tincidunt. Duis id diam eu libero mattis hendrerit. Pellentesque at augue non felis bibendum egestas eget nec nibh.
+        We send only notifications that matter. Rather than waste time assessing 
+        the importance of all messages sent to a mailing list or posted to a blog, 
+        OpsTab lets members of your organization follow relevant users and 
+        apply filters to ensure that they receive fewer, more-actionable 
+        notifications.
       </p>
 
     </div>
@@ -41,10 +51,15 @@
     <div class='span11'>
 
       <p class='lead'>
-        All of your notifications in one place.
+        Root-cause at light-speed.
       </p>
       <p>
-        Integer scelerisque dictum arcu vitae eleifend. Nam id mollis ipsum. Suspendisse dolor urna, tincidunt nec pellentesque et, lacinia in lorem. In eu ligula dolor. Etiam at eros nibh, nec bibendum sem. Nam quis bibendum purus. Etiam tincidunt varius ligula, sit amet suscipit sapien adipiscing id. Phasellus fermentum, erat eget scelerisque tempus, turpis lacus blandit mauris, nec pharetra nibh quam ac lectus. Nulla viverra sagittis ligula, sit amet sodales odio commodo in. Phasellus lacinia est in est luctus tincidunt. Aenean viverra turpis in leo pretium sodales.
+        Stumped by an operational incident? Need to figure out why it happened?
+        And <i>now</i>? OpsTab has you covered. We store all operational events 
+        reported to our system so taht your team can quickly retrace your
+        organization's steps right to the source of the problem. From there, 
+        it's a breeze to adjust your processes to avoid the same problem in the 
+        future.
       </p>
 
     </div>
