--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -25,16 +25,18 @@
   box-shadow: 0 1px 3px rgba(0,0,0,.25);
 
   .container {
-    padding-top : 250px;
+    padding-top : 200px;
   }
 }
 
 .landing-page-header {
   height : 400px;
   margin-bottom : 40px;
+  color : #eee;
+  font-size : 16px;
+  line-height : 25px;
   
   h3 {
-    color : #eee;
     font-weight : normal;
     letter-spacing : 1px;
   }
