Tweaking landing page copy

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,13 +1,15 @@
 <div class='jumbotron landing-page-header'>
 
   <div class='container'>
-    <div class='span6'>
-    <h3>Smooth Operator.</h3>
-    <p>
-      OpsTab reduces 'notification noise' and gives your organization insight 
-      into how your processes are performing.
-    </p>
-    <%= link_to 'Sign Up for Free', new_user_registration_path, :class => 'btn btn-large btn-primary' %>
+    <div class='row'>
+      <div class='span6'>
+      <h3>Hey, Smooth Operator.</h3>
+      <p>
+        OpsTab reduces 'notification noise' and gives your organization insight 
+        into how your processes are performing.
+      </p>
+      <%= link_to 'Sign Up for Free', new_user_registration_path, :class => 'btn btn-large btn-primary' %>
+      </div>
     </div>
   </div>
   
@@ -26,7 +28,7 @@
     <div class='span11'>
 
       <p class='lead'>
-        Less noise, more signal, smarter action. 
+        Less noise, more signal, swift action. 
       </p>
       <p>
         We send only notifications that matter. Rather than waste time assessing 
@@ -56,7 +58,7 @@
       <p>
         Stumped by an operational incident? Need to figure out why it happened?
         And <i>now</i>? OpsTab has you covered. We store all operational events 
-        reported to our system so taht your team can quickly retrace your
+        reported to our system so that your team can quickly retrace your
         organization's steps right to the source of the problem. From there, 
         it's a breeze to adjust your processes to avoid the same problem in the 
         future.
