--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -11,7 +11,7 @@
     <div class='span8 media notification-card'>
 
       <%= link_to user_path( notification.event.user ), :class => 'pull-left' do %>
-        <%= image_tag 'icon_user_128x128.png', 
+        <%= image_tag gravatar_url( notification.event.user, 64 ), 
                       :class => 'media-object img-rounded',
                       'data-src' => 'holder.js/64x64' %>
       <% end %>
