--- a/app/views/users/_user_card.html.erb
+++ b/app/views/users/_user_card.html.erb
@@ -2,11 +2,11 @@
 
   <div class='media user-card'>
     <% if featured_user %>
-      <%= image_tag 'icon_user_64x64.png', 
+      <%= image_tag gravatar_url( user, 64 ), 
                     :class => 'media-object img-rounded pull-left', 
                     'data-src' => 'holder.js/64x64' %>
     <% else %>
-      <%= image_tag 'icon_user_32x32.png', 
+      <%= image_tag gravatar_url( user, 40 ), 
                     :class => 'media-object img-rounded pull-left', 
                     'data-src' => 'holder.js/32x32' %>
     <% end %>
