--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,18 +1,41 @@
-<h1>Displaying users matching '<%= search_terms %>'</h1>
+<header class='page-header'>
+  <h2>Search results for '<%= search_terms %>'</h2>
+</header>
 
-<ul id='usersList'>
+<ul class='unstyled'>
 
   <% users.each do |user| %>
-    
-    <li>
-      <%= user.email %> 
-      <% if current_user.follows? user %>
-        Following
-      <% else %>
-        <%= link_to 'Follow', 
-            create_following_path( :followed_user_id => user.id ), 
-            :method => :post %>
-      <% end %>
+
+    <li class='row-fluid'>
+      
+      <div class='span4'>
+        <%= render :partial => 'users/user_card',
+                  :locals  => { :user          => user,
+                                :featured_user => false } %>
+      </div>
+
+      <div class='span7'>
+        <p class='muted'>
+          <%= user.description %>
+        </p>
+      </div>
+
+      <div class='span1'>
+
+        <% if current_user.follows? user %>
+
+          <span class='label label-success'>following</span>
+
+        <% else %>
+
+          <%= link_to 'Follow', 
+              create_following_path( :followed_user_id => user.id ), 
+              :method => :post,
+              :class  => 'btn' %>
+
+        <% end %>
+
+      </div>
     </li>
 
   <% end %>
