--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,6 +6,9 @@
   <%= f.label :email %>
   <%= f.email_field :email, :autofocus => true %>
 
+  <%= f.label :name %>
+  <%= f.text_field :name %>
+
   <%= f.label :password %>
   <%= f.password_field :password %>
 
