--- a/app/views/notifications/show.html.erb
+++ b/app/views/notifications/show.html.erb
@@ -46,10 +46,17 @@
 
     <tbody>
     <% @notification.event.data.each do |k,v| %>
+      
       <tr>
-        <td><%= k %></td>
-        <td><%= v %></td>
+        <td>
+          <%= k %>
+        </td>
+        <td>
+          <%= (k == 'diff') ? convert_to_formatted_diff( v ).html_safe : v %>
+        </td>
       </tr>
+
+
     <% end %>
     </tbody>
 
