--- a/app/views/notification_mailer/notification.html.erb
+++ b/app/views/notification_mailer/notification.html.erb
@@ -7,18 +7,74 @@
   </head>
 
   <body>
-    <h3>
-      <%= @event.kind %> Event Notification
-    </h3>
     
-    <div id='event-details'>
+    <div class='container'>
     
-      <% @event.data.each do |k,v| %> 
-        <p><%= k %></p>
-        <pre><%= v %></pre>
-      <% end %>
+      <div class='row'>
+
+        <div class='span12 media notification-card'>
+
+          <%= link_to user_url( @notification.event.user ), :class => 'pull-left' do %>
+            <%= image_tag gravatar_url( @notification.event.user, 128 ), 
+                          :class => 'media-object img-rounded',
+                          'data-src' => 'holder.js/128x128' %>
+          <% end %>
+
+          <div class='media-body'>
+            <%= link_to 'View in Browser', 
+                        notification_url( @notification ), 
+                        :class => 'btn pull-right' %>
+            <h3>
+              <%= @notification.event.kind %> event
+              <small>
+                (<%= @notification.created_at.to_s( :human_verbose ) %>)
+              </small>
+            </h3>
+
+            <p class='muted'><%= @notification.event.user.name %></p>
+
+            <p><%= @notification.event.summary %></p>
+
+          </div>
+
+        </div>
+
+      </div>
+
+      <div class='row'>
+
+        <table class='span12 table'>
+        
+          <thead>
+            <tr>
+              <th>Key</th>
+              <th>Value</th>
+            </tr>
+          </thead>
+
+          <tbody>
+          <% @notification.event.data.each do |k,v| %>
+            
+            <tr>
+              <td>
+                <%= k %>
+              </td>
+              <td>
+                <%= (k == 'diff') ? convert_to_formatted_diff( v ).html_safe : v %>
+              </td>
+            </tr>
+
+
+          <% end %>
+          </tbody>
+
+        </table>
+
+      </div>
     
     </div>
+
   </body>
 
 </html>
+
