--- a/app/views/notification_mailer/notification.html.erb
+++ b/app/views/notification_mailer/notification.html.erb
@@ -14,7 +14,7 @@
 
         <div class='span12 media notification-card'>
 
-          <%= link_to @notification.event.user.name user_url( @notification.event.user ), :class => 'pull-left' %>
+          <%= link_to @notification.event.user.name, user_url( @notification.event.user ), :class => 'pull-left' %>
 
           <div class='media-body'>
             <%= link_to 'View in Browser', 
