Fixing syntax bug in image_tag parameters.

--- a/app/views/notification_mailer/notification.html.erb
+++ b/app/views/notification_mailer/notification.html.erb
@@ -20,7 +20,7 @@
                       do %>
             <%= image_tag gravatar_url( @notification.event.user, 128 ), 
                           :class => 'media-object img-rounded',
-                          :style => 'max-width: 100% !important; -webkit-border-radius: 6px; page-break-inside: avoid; text-shadow: none !important; border: 0; background-color: transparent !important; color: #000 !important; display: block; box-shadow: none !important; -ms-interpolation-mode: bicubic; vertical-align: middle; height: auto; margin-left: 0; -moz-border-radius: 6px; margin-right: 0; border-radius: 6px; width: auto\9;'
+                          :style => 'max-width: 100% !important; -webkit-border-radius: 6px; page-break-inside: avoid; text-shadow: none !important; border: 0; background-color: transparent !important; color: #000 !important; display: block; box-shadow: none !important; -ms-interpolation-mode: bicubic; vertical-align: middle; height: auto; margin-left: 0; -moz-border-radius: 6px; margin-right: 0; border-radius: 6px; width: auto\9;',
                           'data-src' => 'holder.js/128x128' %>
           <% end %>
 
